# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
gendiff/: __init__.py  io.py  main.py
gendiff/scripts/: gendiff.py
sample_data/: after.json
tests/: test_main.py
tests/fixtures/: after.yaml  after2.json  before.yaml  before2.json  flat_after.yaml  flat_before.json  flat_before.yaml  flat_diff.txt
